--- a/branches/NSD_3_2_SEXY/nsd-xfer.8.in
+++ b/branches/NSD_3_2_SEXY/nsd-xfer.8.in
@@ -1,13 +1,13 @@
-.TH "nsd\-xfer" "8" "@date@" "NLnet Labs" "nsd @version@"
+.TH "dnssexy\-xfer" "8" "@date@" "NLnet Labs" "dnssexy @version@"
 .\" Copyright (c) 2001\-2011, NLnet Labs. All rights reserved.
 .\" See LICENSE for the license.
 .SH "NAME"
 .LP
-.B nsd\-xfer
+.B dnssexy\-xfer
 \- AXFR client to transfer zones from a name server
 .SH "SYNOPSIS"
 .LP 
-.B nsd\-xfer
+.B dnssexy\-xfer
 .RB [ \-4 ] 
 .RB [ \-6 ] 
 .RB [ \-a
@@ -26,10 +26,8 @@
 .I servers
 .SH "DESCRIPTION"
 .LP 
-.B Nsd\-xfer 
+.B Dnssexy\-xfer 
 is program to transfer zones from a name server using AXFR.
-.B NSD 
-is a complete implementation of an authoritative DNS nameserver.
 .SH "OPTIONS"
 .LP 
 .TP
@@ -71,12 +69,15 @@ List of nameservers to try.
 .LP 
 To run this program the standard way type:
 .LP 
-# nsd\-xfer \-z foobar.cz \-f foobar.cz.zone 1.2.3.4
+# dnssexy\-xfer \-z foobar.cz \-f foobar.cz.zone 1.2.3.4
 .SH "SEE ALSO"
 .LP
-nsd(8), nsdc(8), nsd.conf(5), nsd-checkconf(8),
-nsd-notify(8), nsd-patch(8), zonec(8)
+dnssexy(8), dnssexyc(8), dnssexy.conf(5), dnssexy-checkconf(8),
+dnssexy-notify(8), dnssexy-patch(8)
 .SH "AUTHORS"
+.LP
+.B Dnssexy
+was written by NLnet Labs.
 .LP
 .B NSD
 was written by NLnet Labs and RIPE NCC joint team. Please see CREDITS
