--- a/branches/NSD_3_2_SEXY/Makefile.in
+++ b/branches/NSD_3_2_SEXY/Makefile.in
@@ -1,5 +1,5 @@
 #
-# Makefile -- one file to make them all, nsd(8)
+# Makefile -- one file to make them all, dnssexy(8)
 #
 # Copyright (c) 2001-2011, NLnet Labs. All rights reserved.
 #
@@ -15,7 +15,7 @@ sbindir	= @sbindir@
 mandir = @mandir@
 datarootdir = @datarootdir@
 
-# NSD specific pathnames
+# Dnssexy specific pathnames
 configdir = @configdir@
 piddir = @piddir@
 dbdir = @dbdir@
@@ -62,8 +62,8 @@ EDIT		= sed \
 			-e 's,@spriority\@,$(spriority),g' \
 			-e 's,@kpriority\@,$(kpriority),g' 
 
-TARGETS 	= nsd zonec nsd-notify nsd-xfer nsdc.sh nsd-checkconf nsd-patch nsd.conf.sample \
-			 nsd.8 zonec.8 nsd-notify.8 nsd-xfer.8 nsdc.8 nsd-checkconf.8 nsd-patch.8 nsd.conf.5
+TARGETS 	= dnssexy zonec dnssexy-notify dnssexy-xfer dnssexyc.sh dnssexy-checkconf dnssexy-patch dnssexy.conf.sample \
+			 dnssexy.8 zonec.8 dnssexy-notify.8 dnssexy-xfer.8 dnssexyc.8 dnssexy-checkconf.8 dnssexy-patch.8 dnssexy.conf.5
 
 ALL_OBJECTS	=			\
 	answer.o			\
@@ -312,46 +312,46 @@ all:	$(TARGETS)
 $(ALL_OBJECTS):
 	$(COMPILE) -c $<
 
-nsdc.sh:	$(srcdir)/nsdc.sh.in config.h
-	rm -f nsdc.sh
-	$(EDIT) $(srcdir)/nsdc.sh.in > nsdc.sh
-	chmod +x nsdc.sh
+dnssexyc.sh:	$(srcdir)/nsdc.sh.in config.h
+	rm -f dnssexyc.sh
+	$(EDIT) $(srcdir)/nsdc.sh.in > dnssexyc.sh
+	chmod +x dnssexyc.sh
 
-nsd.conf.sample:	$(srcdir)/nsd.conf.sample.in config.h
-	rm -f nsd.conf.sample
-	$(EDIT) $(srcdir)/nsd.conf.sample.in > nsd.conf.sample
+dnssexy.conf.sample:	$(srcdir)/nsd.conf.sample.in config.h
+	rm -f dnssexy.conf.sample
+	$(EDIT) $(srcdir)/nsd.conf.sample.in > dnssexy.conf.sample
 
-nsd.conf.5:	$(srcdir)/nsd.conf.5.in config.h
-	rm -f nsd.conf.5
-	$(EDIT) $(srcdir)/nsd.conf.5.in > nsd.conf.5
+dnssexy.conf.5:	$(srcdir)/nsd.conf.5.in config.h
+	rm -f dnssexy.conf.5
+	$(EDIT) $(srcdir)/nsd.conf.5.in > dnssexy.conf.5
 
-nsd.8:	$(srcdir)/nsd.8.in config.h
-	rm -f nsd.8
-	$(EDIT) $(srcdir)/nsd.8.in > nsd.8
+dnssexy.8:	$(srcdir)/nsd.8.in config.h
+	rm -f dnssexy.8
+	$(EDIT) $(srcdir)/nsd.8.in > dnssexy.8
 
-nsdc.8:	$(srcdir)/nsdc.8.in config.h
-	rm -f nsdc.8
-	$(EDIT) $(srcdir)/nsdc.8.in > nsdc.8
+dnssexyc.8:	$(srcdir)/nsdc.8.in config.h
+	rm -f dnssexyc.8
+	$(EDIT) $(srcdir)/nsdc.8.in > dnssexyc.8
 
 zonec.8:	$(srcdir)/zonec.8.in config.h
 	rm -f zonec.8
 	$(EDIT) $(srcdir)/zonec.8.in > zonec.8
 
-nsd-notify.8:	$(srcdir)/nsd-notify.8.in config.h
-	rm -f nsd-notify.8
-	$(EDIT) $(srcdir)/nsd-notify.8.in > nsd-notify.8
+dnssexy-notify.8:	$(srcdir)/nsd-notify.8.in config.h
+	rm -f dnssexy-notify.8
+	$(EDIT) $(srcdir)/nsd-notify.8.in > dnssexy-notify.8
 
-nsd-xfer.8:	$(srcdir)/nsd-xfer.8.in config.h
-	rm -f nsd-xfer.8
-	$(EDIT) $(srcdir)/nsd-xfer.8.in > nsd-xfer.8
+dnssexy-xfer.8:	$(srcdir)/nsd-xfer.8.in config.h
+	rm -f dnssexy-xfer.8
+	$(EDIT) $(srcdir)/nsd-xfer.8.in > dnssexy-xfer.8
 
-nsd-checkconf.8:	$(srcdir)/nsd-checkconf.8.in config.h
-	rm -f nsd-checkconf.8
-	$(EDIT) $(srcdir)/nsd-checkconf.8.in > nsd-checkconf.8
+dnssexy-checkconf.8:	$(srcdir)/nsd-checkconf.8.in config.h
+	rm -f dnssexy-checkconf.8
+	$(EDIT) $(srcdir)/nsd-checkconf.8.in > dnssexy-checkconf.8
 
-nsd-patch.8:	$(srcdir)/nsd-patch.8.in config.h
-	rm -f nsd-patch.8
-	$(EDIT) $(srcdir)/nsd-patch.8.in > nsd-patch.8
+dnssexy-patch.8:	$(srcdir)/nsd-patch.8.in config.h
+	rm -f dnssexy-patch.8
+	$(EDIT) $(srcdir)/nsd-patch.8.in > dnssexy-patch.8
 
 install: all
 	$(INSTALL) -d $(DESTDIR)$(sbindir)
@@ -361,50 +361,48 @@ install: all
 	$(INSTALL) -d $(DESTDIR)$(mandir)
 	$(INSTALL) -d $(DESTDIR)$(mandir)/man8
 	$(INSTALL) -d $(DESTDIR)$(mandir)/man5
-	$(INSTALL) nsd $(DESTDIR)$(sbindir)/nsd
-	$(INSTALL) zonec $(DESTDIR)$(sbindir)/zonec
-	$(INSTALL) nsdc.sh $(DESTDIR)$(sbindir)/nsdc
-	$(INSTALL) nsd-notify $(DESTDIR)$(sbindir)/nsd-notify
-	$(INSTALL) nsd-checkconf $(DESTDIR)$(sbindir)/nsd-checkconf
-	$(INSTALL) nsd-patch $(DESTDIR)$(sbindir)/nsd-patch
-	$(INSTALL) nsd-xfer $(DESTDIR)$(sbindir)/nsd-xfer
-	$(INSTALL_DATA) $(srcdir)/nsd.8 $(DESTDIR)$(mandir)/man8
-	$(INSTALL_DATA) $(srcdir)/nsdc.8 $(DESTDIR)$(mandir)/man8
-	$(INSTALL_DATA) $(srcdir)/zonec.8 $(DESTDIR)$(mandir)/man8
-	$(INSTALL_DATA) $(srcdir)/nsd-notify.8 $(DESTDIR)$(mandir)/man8/nsd-notify.8
-	$(INSTALL_DATA) $(srcdir)/nsd-checkconf.8 $(DESTDIR)$(mandir)/man8/nsd-checkconf.8
-	$(INSTALL_DATA) $(srcdir)/nsd-patch.8 $(DESTDIR)$(mandir)/man8/nsd-patch.8
-	$(INSTALL_DATA) $(srcdir)/nsd-xfer.8 $(DESTDIR)$(mandir)/man8/nsd-xfer.8
-	$(INSTALL_DATA) $(srcdir)/nsd.conf.5 $(DESTDIR)$(mandir)/man5/nsd.conf.5
-	$(INSTALL_DATA) nsd.conf.sample $(DESTDIR)$(nsdconfigfile).sample
+	$(INSTALL) dnssexy $(DESTDIR)$(sbindir)/dnssexy
+	$(INSTALL) dnssexyc.sh $(DESTDIR)$(sbindir)/dnssexyc
+	$(INSTALL) dnssexy-notify $(DESTDIR)$(sbindir)/dnssexy-notify
+	$(INSTALL) dnssexy-checkconf $(DESTDIR)$(sbindir)/dnssexy-checkconf
+	$(INSTALL) dnssexy-patch $(DESTDIR)$(sbindir)/dnssexy-patch
+	$(INSTALL) dnssexy-xfer $(DESTDIR)$(sbindir)/dnssexy-xfer
+	$(INSTALL_DATA) $(srcdir)/dnssexy.8 $(DESTDIR)$(mandir)/man8
+	$(INSTALL_DATA) $(srcdir)/dnssexyc.8 $(DESTDIR)$(mandir)/man8
+	$(INSTALL_DATA) $(srcdir)/dnssexy-notify.8 $(DESTDIR)$(mandir)/man8/dnssexy-notify.8
+	$(INSTALL_DATA) $(srcdir)/dnssexy-checkconf.8 $(DESTDIR)$(mandir)/man8/dnssexy-checkconf.8
+	$(INSTALL_DATA) $(srcdir)/dnssexy-patch.8 $(DESTDIR)$(mandir)/man8/dnssexy-patch.8
+	$(INSTALL_DATA) $(srcdir)/dnssexy-xfer.8 $(DESTDIR)$(mandir)/man8/dnssexy-xfer.8
+	$(INSTALL_DATA) $(srcdir)/dnssexy.conf.5 $(DESTDIR)$(mandir)/man5/dnssexy.conf.5
+	$(INSTALL_DATA) dnssexy.conf.sample $(DESTDIR)$(nsdconfigfile).sample
 
 uninstall:
 	@echo
-	rm -f -- $(DESTDIR)$(sbindir)/nsd $(DESTDIR)$(sbindir)/zonec $(DESTDIR)$(sbindir)/nsdc $(DESTDIR)$(sbindir)/nsd-notify $(DESTDIR)$(sbindir)/nsd-xfer $(DESTDIR)$(sbindir)/nsd-checkconf $(DESTDIR)$(sbindir)/nsd-patch
-	rm -f -- $(DESTDIR)$(mandir)/man8/nsd.8 $(DESTDIR)$(mandir)/man8/nsdc.8 $(DESTDIR)$(mandir)/man8/zonec.8 $(DESTDIR)$(mandir)/man8/nsd-notify.8 $(DESTDIR)$(mandir)/man8/nsd-xfer.8 $(DESTDIR)$(mandir)/man5/nsd.conf.5
-	rm -f -- $(DESTDIR)$(mandir)/man8/nsd-checkconf.8 $(DESTDIR)$(mandir)/man8/nsd-patch.8
+	rm -f -- $(DESTDIR)$(sbindir)/dnssexy $(DESTDIR)$(sbindir)/dnssexyc $(DESTDIR)$(sbindir)/dnssexy-notify $(DESTDIR)$(sbindir)/dnssexy-xfer $(DESTDIR)$(sbindir)/dnssexy-checkconf $(DESTDIR)$(sbindir)/dnssexy-patch
+	rm -f -- $(DESTDIR)$(mandir)/man8/dnssexy.8 $(DESTDIR)$(mandir)/man8/dnssexyc.8 $(DESTDIR)$(mandir)/man8/dnssexy-notify.8 $(DESTDIR)$(mandir)/man8/dnssexy-xfer.8 $(DESTDIR)$(mandir)/man5/dnssexy.conf.5
+	rm -f -- $(DESTDIR)$(mandir)/man8/dnssexy-checkconf.8 $(DESTDIR)$(mandir)/man8/dnssexy-patch.8
 	rm -f -- $(DESTDIR)$(pidfile) $(DESTDIR)$(dbfile)
 	@echo
 	@echo "You still need to remove $(DESTDIR)$(configdir), $(DESTDIR)$(piddir), $(DESTDIR)$(dbdir) directory by hand."
 
 test: 
 
-nsd:	$(NSD_OBJECTS) $(LIBOBJS)
+dnssexy:	$(NSD_OBJECTS) $(LIBOBJS)
 	$(LINK) -o $@ $(NSD_OBJECTS) $(LIBOBJS) $(LIBS)
 
 zonec:	$(ZONEC_OBJECTS) $(LIBOBJS)
 	$(LINK) -o $@ $(ZONEC_OBJECTS) $(LIBOBJS) $(LIBS)
 
-nsd-notify:	$(NSD_NOTIFY_OBJECTS) $(LIBOBJS)
+dnssexy-notify:	$(NSD_NOTIFY_OBJECTS) $(LIBOBJS)
 	$(LINK) -o $@ $(NSD_NOTIFY_OBJECTS) $(LIBOBJS) $(LIBS)
 
-nsd-checkconf:	$(NSD_CHECKCONF_OBJECTS) $(LIBOBJS)
+dnssexy-checkconf:	$(NSD_CHECKCONF_OBJECTS) $(LIBOBJS)
 	$(LINK) -o $@ $(NSD_CHECKCONF_OBJECTS) $(LIBOBJS) $(LIBS)
 
-nsd-xfer:	$(NSD_XFER_OBJECTS) $(LIBOBJS)
+dnssexy-xfer:	$(NSD_XFER_OBJECTS) $(LIBOBJS)
 	$(LINK) -o $@ $(NSD_XFER_OBJECTS) $(LIBOBJS) $(LIBS)
 
-nsd-patch:	$(NSD_PATCH_OBJECTS) $(LIBOBJS)
+dnssexy-patch:	$(NSD_PATCH_OBJECTS) $(LIBOBJS)
 	$(LINK) -o $@ $(NSD_PATCH_OBJECTS) $(LIBOBJS) $(LIBS)
 
 cutest:	$(CUTEST_OBJECTS)
@@ -413,6 +411,7 @@ cutest:	$(CUTEST_OBJECTS)
 clean:
 	rm -f *.o *.so y.* *.core *.gmon tags TAGS
 	rm -f $(TARGETS)
+	rm -f nsd nsd-notify nsd-xfer nsdc.sh nsd-checkconf nsd-patch
 
 realclean: clean
 	rm -f Makefile config.h config.log config.status
