--- a/branches/NSD_3_2_SEXY/nsd-patch.8.in
+++ b/branches/NSD_3_2_SEXY/nsd-patch.8.in
@@ -1,12 +1,12 @@
-.TH "nsd\-patch" "8" "@date@" "NLnet Labs" "nsd @version@"
+.TH "dnssexy\-patch" "8" "@date@" "NLnet Labs" "dnssexy @version@"
 .\" Copyright (c) 2001\-2011, NLnet Labs. All rights reserved.
 .\" See LICENSE for the license.
 .SH "NAME"
 .LP
-.B nsd\-patch
-\- NSD zone patcher version @version@.
+.B dnssexy\-patch
+\- Dnssexy zone patcher version @version@.
 .SH "SYNOPSIS"
-.B nsd\-patch
+.B dnssexy\-patch
 .RB [ \-c
 .IR configfile ]
 .RB [ \-f ]
@@ -19,9 +19,9 @@
 .IR difffile ]
 .SH "DESCRIPTION"
 .LP
-.B Nsd\-patch
-is the zone patcher for nsd(8). It reads in the nsd database 
-(nsd.db) and difffile (ixfr.db), and overwrites the zone text files 
+.B Dnssexy\-patch
+is the zone patcher for dnssexy(8). It reads in the dnssexy database 
+(dnssexy.db) and difffile (ixfr.db), and overwrites the zone text files 
 if they have been updated. Running this regularly ensures that the 
 difffile does not grow infinitely.
 .SH "OPTIONS" 
@@ -52,17 +52,20 @@ Read specified difffile. Overrides the config file setting.
 .TP
 @dbfile@
 default
-.B NSD
+.B dnssexy
 database
 .TP
 @nsdconfigfile@
 default
-.B NSD
+.B dnssexy
 configuration file
 .SH "SEE ALSO"
-nsd(8), nsdc(8), nsd.conf(5), nsd-checkconf(8), nsd-notify(8), 
-nsd-xfer(8), zonec(8)
+dnssexy(8), dnssexyc(8), dnssexy.conf(5), dnssexy-checkconf(8),
+dnssexy-notify(8), dnssexy-xfer(8)
 .SH "AUTHORS"
+.LP
+.B Dnssexy
+was written by NLnet Labs.
 .LP
 .B NSD
 was written by NLnet Labs and RIPE NCC joint team. Please see
