--- a/branches/NSD_3_2_SEXY/nsdc.8.in
+++ b/branches/NSD_3_2_SEXY/nsdc.8.in
@@ -1,13 +1,13 @@
-.TH "NSDC" "8" "@date@" "NLnet Labs" "NSDC @version@"
+.TH "DNSSEXYC" "8" "@date@" "NLnet Labs" "DNSSEXYC @version@"
 .\" Copyright (c) 2001\-2011, NLnet Labs. All rights reserved.
 .\" See LICENSE for the license.
 .SH "NAME"
 .LP
-.B nsdc
-\- Name Server Daemon (NSD) control script.
+.B dnssexyc
+\- DNS SEc proXY (dnssexy) control script.
 .SH "SYNOPSIS"
 .LP
-.B nsdc
+.B dnssexyc
 .RB [ \-c
 .IR configfile ]
 .I start
@@ -29,52 +29,52 @@
 .I patch
 .SH "DESCRIPTION"
 .LP
-.B Nsdc
-is the shell script that used to control nsd(8) and zonec(8) from 
-.B NSD
+.B Dnssexyc
+is the shell script that used to control dnssexy(8) and zonec(8) from 
+.B dnssexy
 distribution.
-.B Nsdc
+.B Dnssexyc
 is also suitable to be linked into
 .I /etc/rc.d
 directory on
 .I BSD
-like systems for automatic startup of nsd(8) at boot time.
+like systems for automatic startup of dnssexy(8) at boot time.
 .P
 At every invokation,
-.B nsdc
-will try to read the nsd.conf(5) configuration file. An example of 
+.B dnssexyc
+will try to read the dnssexy.conf(5) configuration file. An example of 
 such configuration file is distributed with the
-.B NSD
+.B dnssexy
 package as
-.IR nsd.conf.sample .
+.IR dnssexy.conf.sample .
 The config file is checked for errors before it is used, see 
-nsd\-checkconf(8).
+dnssexy\-checkconf(8).
 .P
 Possible
-.B nsdc
+.B dnssexyc
 applications are:
 .TP
 .I start
-Start nsd(8).
+Start dnssexy(8).
 .TP
 .I stop
-Shut down nsd(8) by sending 
+Shut down dnssexy(8) by sending 
 .I SIGTERM 
 to it. 
 .TP
 .I reload
-Initiate nsd(8) name space database reload by sending
+Initiate dnssexy(8) name space database reload by sending
 .IR SIGHUP.
 .TP 
 .I rebuild
-Rebuild the nsd(8) database by invoking zonec(8) with appropriate 
+Rebuild the dnssexy(8) database by invoking zonec(8) with appropriate 
 arguments.
 .TP 
 .I restart
-Restart nsdc(8). This equals to nsdc stop && nsdc start.
+Restart dnssexyc(8). This equals to dnssexyc stop && dnssexyc start.
 .TP
 .I running
-Check whether nsd(8) is running. Returns error message and error 
+Check whether dnssexy(8) is running. Returns error message and error 
 code if it is not running, and no message and zero error code 
 otherwise. 
 .TP
@@ -83,14 +83,14 @@ Updates all the slave zones which have
 .I allow\-notify:
 from localhost (127.0.0.1 or ::1) allowed.
 If a TSIG key is specified for the allow\-notify statement in the 
-config file, it will be used to secure the notify. Note that NSD 
+config file, it will be used to secure the notify. Note that dnssexy
 keeps track of zone timeouts automatically, this is only needed if 
 you want to manually force updates by sending notify messages to the 
 localhost. 
 .P
 .RS
-Another method you can use is to stop nsd, delete the xfrd.state
-file and then start nsd again. It will try to update all zones.
+Another method you can use is to stop dnssexy, delete the xfrd.state
+file and then start dnssexy again. It will try to update all zones.
 This method does not require allow\-notify: statements.
 .RE
 .TP
@@ -98,17 +98,17 @@ This method does not require allow\-notify: statements.
 Sends notify messages to all the slaves for all the zones that have the
 .I notify:
 keyword in the
-.I nsd.conf
+.I dnssexy.conf
 file. If a TSIG key is specified for a notify statement, it will be 
 used to secure the notification message to that slave server.
 .TP
 .I patch
-Merge zone transfer changes back to zone files. It reads in the nsd 
-database (nsd.db) and difffile (ixfr.db), and overwrites the zone 
+Merge zone transfer changes back to zone files. It reads in the dnssexy 
+database (dnssexy.db) and difffile (ixfr.db), and overwrites the zone 
 text files if they have been updated. Running this regularly 
 ensures that the difffile does not grow infinitely. If any zone text
 files have been changed (including those of the master zones), the
-nsd.db is rebuild and nsd is reloaded.
+dnssexy.db is rebuild and dnssexy is reloaded.
 .SH "OPTIONS"
 .TP
 .B \-c\fI configfile
@@ -117,19 +117,19 @@ Specify configfile to use instead of the default
 .SH "FILES"
 .TP
 @nsdconfigfile@
-Configuration file for nsd to change default pathnames and
-.B NSD 
+Configuration file for dnssexy to change default pathnames and
+.B dnssexy
 flags. The zone names, pathnames to zone files and access control 
-lists are also in nsd.conf(5).
+lists are also in dnssexy.conf(5).
 .TP
 @dbfile@
 default
-.B NSD
+.B dnssexy
 database
 .TP
 @dbfile@.lock
 Lockfile for the
-.B NSD
+.B dnssexy
 database access by operator tools.
 .TP
 @difffile@
@@ -138,32 +138,35 @@ contents transferred.
 .TP
 @xfrdfile@
 State for the zone transfer process of 
-.BR NSD. 
+.BR dnssexy. 
 Contains timeouts for the zones and whether zones are expired.
 .TP
 @pidfile@
 the process id of the name server.
 .SH "DIAGNOSTICS"
 .LP
-.B Nsdc
+.B Dnssexyc
 will return zero return code if operation was successful and
 an error message to standard output plus a non\-zero return code
 otherwise.
 .SH "SEE ALSO"
 .LP
-nsd(8), nsd.conf(5), nsd\-checkconf(8), nsd\-notify(8), 
-nsd\-patch(8), nsd\-xfer(8), zonec(8)
+dnssexy(8), dnssexy.conf(5), dnssexy\-checkconf(8), dnssexy\-notify(8), 
+dnssexy\-patch(8), dnssexy\-xfer(8)
 .SH "AUTHORS"
+.LP
+.B Dnssexy
+was written by NLnet Labs.
 .LP
 .B NSD
 was written by NLnet Labs and RIPE NCC joint team. Please see
 CREDITS file in the distribution for further details.
 .SH "BUGS"
 Syntax checking of the config file is rudimentary and error 
-messages may be wrong. If you do a nsdc patch, whilst a (long) zone 
+messages may be wrong. If you do a dnssexyc patch, whilst a (long) zone 
 transfer is busy, the zone transfer contents will be partially 
 lost. After a reload, this will be detected and the zone transfer 
-should be restarted. The reload that happens at the end of nsdc 
+should be restarted. The reload that happens at the end of dnssexyc 
 patch also frees up memory churn in 
-.B NSD 
+.B dnssexy
 caused by zone transfers.
