Removing zonec from installation also means dnssexy should be able to start without a "precompiled" database. The dnssexy daemon has to create it itselve. Removed obligation to provide zonefile in configuration. Removed printing options for serving with configure --help. Reasonable defaults are chosen. e.g. prehashing does not make sense when we're not going to serve anyway. Started a mini HOWTO in doc/README

--- a/branches/DNSSEXY_0_2/Makefile.in
+++ b/branches/DNSSEXY_0_2/Makefile.in
@@ -114,6 +114,7 @@ NSD_OBJECTS	=				\
 	configparser.o				\
 	options.o				\
 	dbaccess.o				\
+	dbcreate.o			\
 	difffile.o				\
 	dname.o					\
 	dns.o					\
