--- a/branches/DNSSEXY_0_2/tpkg/dnssexy-setup/Makefile.in
+++ b/branches/DNSSEXY_0_2/tpkg/dnssexy-setup/Makefile.in
@@ -7,12 +7,10 @@ MASTER_IP	=  @MASTER_IP@
 MASTER_PORT     =  @MASTER_PORT@
 PROXY           =  @PROXY@
 PROXY_CONFIG    = $(PROXY)/$(PROXY).cf
-PROXY_DB        = $(PROXY)/dnssexy.db
 PROXY_IP	=  @PROXY_IP@
 PROXY_PORT      =  @PROXY_PORT@
 SLAVE           =  @SLAVE@
 SLAVE_CONFIG    = $(SLAVE)/$(SLAVE).cf
-SLAVE_DB        = $(SLAVE)/dnssexy.db
 SLAVE_IP	=  @SLAVE_IP@
 SLAVE_PORT      =  @SLAVE_PORT@
 
@@ -62,14 +60,6 @@ rebuild rebuild-$(MASTER) $(MASTER_DB): $(SIGNED_ZONE_FILES) $(TSIGS)
 	@( $(NSDC) -c $(MASTER_CONFIG) rebuild \
 	&& echo "-- Rebuilt $(MASTER) ... " )\
      ||    echo "-- Could not rebuild $(MASTER)"
-rebuild-$(PROXY) $(PROXY_DB): $(TSIGS)
-	@( $(NSDC) -c $(PROXY_CONFIG) rebuild \
-	&& echo "-- Rebuilt $(PROXY) ... " )\
-     ||    echo "-- Could not rebuild $(PROXY)"
-rebuild-$(SLAVE) $(SLAVE_DB): $(TSIGS)
-	@( $(NSDC) -c $(SLAVE_CONFIG) rebuild \
-	&& echo "-- Rebuilt $(SLAVE) ... " )\
-     ||    echo "-- Could not rebuild $(SLAVE)"
 
 $(TSIGS):
 	@mkdir -p tsigs
@@ -91,13 +81,13 @@ start-$(MASTER) $(MASTER)/dnssexy.pid: $(MASTER_DB)
      || (  $(NSDC) -c $(MASTER_CONFIG) restart \
 	&& echo "-- Restarted $(MASTER) ..."   ) \
      || echo "-- Could not (re)start $(MASTER)"
-start-$(PROXY) $(PROXY)/dnssexy.pid: $(PROXY_DB)
+start-$(PROXY) $(PROXY)/dnssexy.pid: $(TSIGS)
 	@( $(NSDC) -c $(PROXY_CONFIG) start \
 	&& echo "-- Started $(PROXY) ..."   ) \
      || (  $(NSDC) -c $(PROXY_CONFIG) restart \
 	&& echo "-- Restarted $(PROXY) ..."   ) \
      || echo "-- Could not (re)start $(PROXY)"
-start-$(SLAVE) $(SLAVE)/dnssexy.pid: $(SLAVE_DB)
+start-$(SLAVE) $(SLAVE)/dnssexy.pid: $(TSIGS)
 	@( $(NSDC) -c $(SLAVE_CONFIG) start \
 	&& echo "-- Started $(SLAVE) ..."   ) \
      || (  $(NSDC) -c $(SLAVE_CONFIG) restart \
